<resources>
    <string name="app_name">Mis Finanzas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrar">Registrar</string>
    <string name="entrar">Entrar</string>
    <string name="usuario">Usuario</string>
    <string name="clave">Clave</string>
    <string name="agregarMovimiento">Agregar Movimiento</string>
    <string name="descripcion">Descripcion</string>
    <string name="monto">Monto</string>
    <string name="nombreUsuario">Nombre de usuario</string>
    <string name="retiro">¿Es un retiro?</string>
    <string name="balance">Balance</string>

    <string name="error_no_existe_usuario">No existe usuario o clave incorrecta</string>
    <string name="error_no_coinciden_claves">No coinciden las claves</string>
    <string name="error_faltan_datos">Faltan datos</string>
    <string name="borrar_movimientos">Borrar Movimientos</string>
</resources>
